# python-project-49

./: README.md  pyproject.toml
brain_games/games/: calc.py  engine.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
